bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:5: error: ')' expected but 'return' found.
  return false
  ^